# QuantSolo_perple

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: frozen.sha256  frozen.toml  source_priority.yaml  tunable.yaml
docs/deliverables/: QuantSolo_产品设计文档_PRD_v1.0.md  QuantSolo_人工执行事项与部署运维迭代SOP_v1.0.md  QuantSolo_执行与风控状态机_v1.3.md  QuantSolo_执行行动指导手册_v1.0.md  QuantSolo_模块联调与端到端跑通指引_v1.0.md  QuantSolo_模拟盘验收手册_v2.0.md  QuantSolo_点时数据契约_v2.0.md  QuantSolo_研究协议_v2.0.md  QuantSolo_系统设计文档_v5.0.md  QuantSolo_统计闸门校准报告_v1.0.md  QuantSolo_软件功能设计文档_v1.0.md  QuantSolo_软件开发架构方案_v1.0.md  QuantSolo_项目实施计划_v1.0.md  QuantSolo_项目总览索引_v2.0.md  QuantSolo_项目测试验收方案_v1.0.md
scripts/: break_glass.py
src/: __main__.py  logger.py
src/common/: config.py
src/execution/: break_glass.py  idempotency.py  interfaces.py  order_sizing.py  outbox.py  rate_limiter.py  state_machine.py
src/factor/: __init__.py  momentum.py  pipeline.py  quality.py  transforms.py
src/monitor/: __init__.py  alerter.py  dashboard.py  watchdog.py
src/orchestration/: __init__.py  cli.py  demo_data.py  e2e.py  research_pipeline.py  trading_pipeline.py
src/pit/: daily_bar.py  factor_snapshot.py  financials.py  query_engine.py  validator.py
src/reconcile/: __init__.py  cost_attribution.py  daily_recon.py
src/research/: __init__.py  deflated_sharpe.py  gates.py  trial_log.py  (+1 more)
tests/: conftest.py
tools/: frozen_params_check.py  gate_calibration.py  golive_readiness.py  power_sim.py  static_guard_scan.py
(+35 files in other folders)
